Modify mobile menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,14 +11,17 @@
     <header class="nav-container">
       <nav>
         <div class="lower-bar">
-          <div class="haftamu">Haftamu</div>
-
-          <img
+          <div class="hamburger">
+            <img
             src="bar/Enabled.png"
             class="allign"
             alt="hamburger menu symbol"
           />
-          <p class="close-menu">&times;</p>
+          </div>
+          <div class="close1">
+            <p class="close-menu">&times;</p>
+          </div>
+          
         </div>
         <div class="contacts-menu">
           <ul>
@@ -38,11 +41,11 @@
         </div>
 
         <div class="desktop-left">
-          <div class="name">Haftamu</div>
+          <div class="name"><a href="#section11">Haftamu</a></div>
           <div class="contacts">
             <ul>
               <li>
-                <a href="#section11" class="links">Portfolio</a>
+                <a href="#section22" class="links">Portfolio</a>
               </li>
               <li>
                 <a href="#section33" class="links">About</a>
@@ -127,7 +130,7 @@
         </div>
       </section>
 
-      <section class="section2">
+      <section class="section2" id="section22">
         <div class="myRecent">
           <div class="works">
             <div class="my-works">
